# codal-jacdac

./: .gitignore  CMakeLists.txt  README.md
inc/: CodalJacdac.h  jd_user_config.h
pxt/: cbuzzer.cpp  flash.cpp  jdc.cpp  jdc.h  jdc.ts  lightlevel.cpp  mbbridge.cpp  microbit.cpp  microbitradio.cpp  microbitsoundlevel.cpp  microbitsoundplayer.cpp  pxt.json  shims.d.ts
source/: app.cpp  hw.cpp  jacdac.cpp  pins.cpp  platform.cpp
